# cir

./: CMakeLists.txt
docs/: grammar.rst
include/: cir.h
src/: cir.c  cir.h  lexer.c  lexer.h  list.c  list.h  memory.c  memory.h  parser.c  parser.h  serialization.c  stream.c  stream.h  string_utils.c  string_utils.h  stringify.c  stringify.h  test_app.c  tokens.c  tokens.h  types.c  types.h
src/types/: atom.c  cir.c  function.c  list.c  list.h  statement.c
tests/invalid/: invalid_function.cir  invalid_functions.cir
tests/programs/: euler_one.cir  function.cir  if.cir  simple.cir
tests/valid/: comments.cir  euler_one.cir  jump.cir  label.cir  move.cir
